--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -64,7 +64,6 @@
 
                           <li class="active"><a href="#intro">Home</a></li>
                           <li><a href="#about">About</a></li>
-                          <li><a href="#background">Background</a></li>
                           <li><a href="#contact">Contact</a></li>
 
                           <!--
@@ -91,11 +90,13 @@
 
       		<div class="slogan">
       			<h2>Heidi Whiting</h2>
-      			<h4>slogan slogan awesome slogan</h4>
+      			<h4>Fan of <a href="https://en.wikipedia.org/wiki/KISS_principle">simplification</a>,
+              white noise, empathy, and enthusiastic learning. Data geek.
+            </h4>
       		</div>
 
       		<div class="page-scroll">
-      			<a href="#background" class="btn btn-circle">
+      			<a href="#about" class="btn btn-circle">
       				<i class="fa fa-angle-double-down animated"></i>
       			</a>
       		</div>
@@ -111,7 +112,13 @@
                     <div class="col-lg-8 col-lg-offset-2">
                     <div class="wow bounceInDown" data-wow-delay="0.4s">
                     <div class="section-heading">
-                          <h2>About us</h2>
+                          <h2>About me</h2>
+                          <p>I'm a data scientist living in Seattle,
+                            Washington, and I currently work at Nordstrom,
+                            where I apply my skills
+                            in digital marketing. Read on for a brief
+                            history of how I got here.
+                          </p>
                           <i class="fa fa-2x fa-angle-down"></i>
                     </div>
                     </div>
@@ -133,11 +140,6 @@
               <!-- /row -->
               </div>
 
-              <!-- row content -->
-              <div class="row">
-              <!-- /row -->
-              </div>
-
           <!-- /container -->
           </div>
 
@@ -150,64 +152,41 @@
   <ul>
     <li>
       <div>
-        <h5>1934</h5>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
+        <h5>2002 to 2009: Absorbing all the things</h5>
+          With minimal background in science or mathematics from high
+          school, I decided that mathematics was a challenge I wanted to
+          pursue in my undergraduate studies and switched my major from
+          English to Mathematics. I
+          earned a B.S. in Mathematics from Columbia College in 2006,
+          a small private teaching college in my hometown, and a M.S. in
+          Applied Mathematics from the University of Missouri in 2009.
       </div>
     </li>
     <li>
       <div>
-        <h5>1937</h5> Proin quam velit, efficitur vel neque vitae, rhoncus commodo mi. Suspendisse finibus mauris et bibendum molestie. Aenean ex augue, varius et pulvinar in, pretium non nisi.
+        <h5>2009 to 2015: Professional data diving</h5>
+           After I completed my education, I spent the next few years
+           gaining foundational experience working with data within a
+           wide range of industries.
+           I have applied my curiosity and attention to detail in industries
+           ranging from property insurance, real estate assessment,
+           biochemical defense, transportation safety research, and
+           cancer research.
       </div>
     </li>
     <li>
       <div>
-        <h5>1940</h5> Proin iaculis, nibh eget efficitur varius, libero tellus porta dolor, at pulvinar tortor ex eget ligula. Integer eu dapibus arcu, sit amet sollicitudin eros.
+        <h5>2015 to now: shift to analytics</h5>
+          During the summer of 2015 I joined Nordstrom to pursue a
+          career in analytics and data science for the opportunity to
+          increase my exposure to statistics applied in more of a
+          business setting. In my current role as a Data Scientist at
+          Nordstrom, I lead analyses from start to finish in
+          support of marketing while leveraging new tools, refining
+          documentation, and automating processes wherever possible.
       </div>
     </li>
-    <li>
-      <div>
-        <h5>1943</h5> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
-      </div>
-    </li>
-    <li>
-      <div>
-        <h5>1946</h5> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
-      </div>
-    </li>
-    <li>
-      <div>
-        <h5>1956</h5> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
-      </div>
-    </li>
-    <li>
-      <div>
-        <h5>1957</h5> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
-      </div>
-    </li>
-    <li>
-      <div>
-        <h5>1967</h5> Aenean condimentum odio a bibendum rhoncus. Ut mauris felis, volutpat eget porta faucibus, euismod quis ante.
-      </div>
-    </li>
-    <li>
-      <div>
-        <h5>1977</h5> Vestibulum porttitor lorem sed pharetra dignissim. Nulla maximus, dui a tristique iaculis, quam dolor convallis enim, non dignissim ligula ipsum a turpis.
-      </div>
-    </li>
-    <li>
-      <div>
-        <h5>1985</h5> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
-      </div>
-    </li>
-    <li>
-      <div>
-        <h5>2000</h5> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
-      </div>
-    </li>
-    <li>
-      <div>
-        <h5>2005</h5> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
-      </div>
-    </li>
+
   </ul>
 </section>
   <!-- /TIMELINE -->
@@ -231,7 +210,6 @@
             			</div>
         		</div>
 
-
 		<div class="container">
 
           <!-- contact row line -->
@@ -241,41 +219,26 @@
                 </div>
           </div>
 
-          <div class="row">
-          <div class="col-lg-8">
+          <div class="row row-centered">
+          <div class="col-lg-8 col-centered">
+            <div class="boxed-grey">
+                              <address>
+                                    <strong>EMAIL</strong>
+                                    <br>
+                                    <a href="mailto:#">email.name@example.com</a>
+                              </address>
 
-          <div class="boxed-grey">
-                <div class="col-lg-4">
-                      <div class="widget-contact">
-
-                            <h5>Main Office</h5>
-
-                            <address>
-                                  <strong>Squas Design, Inc.</strong><br>
-                                  Seattle, Washington<br>
-                                  <abbr title="Phone">P:</abbr> (123) 456-7890
-                            </address>
-
-                            <address>
-                                  <strong>Email</strong><br>
-                                  <a href="mailto:#">email.name@example.com</a>
-                            </address>
-
-                            <address>
-                                  <strong>We're on social networks</strong><br>
-                                  <ul class="company-social">
-                                  <li class="social-twitter"><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
-                                  <li class="social-dribble"><a href="#" target="_blank"><i class="fa fa-dribbble"></i></a></li>
-                                  <li class="social-google"><a href="#" target="_blank"><i class="fa fa-google-plus"></i></a></li>
-                                  </ul>
-                            </address>
-
-                      <!-- /widget-contact -->
-                      </div>
-                <!-- col-lg-4 -->
-                </div>
-          <!-- boxed-grey -->
-          </div>
+                              <address>
+                                    <strong>SOCIAL NETWORKS</strong>
+                                    <br>
+                                    <ul class="company-social">
+                                          <li class="social-twitter"><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                                          <li class="social-dribble"><a href="#" target="_blank"><i class="fa fa-dribbble"></i></a></li>
+                                          <li class="social-google"><a href="#" target="_blank"><i class="fa fa-google-plus"></i></a></li>
+                                    </ul>
+                              </address>
+              <!-- boxed-grey -->
+              </div>
 
           <!-- /col-8 -->
         </div>
