--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -104,25 +104,34 @@
     </section>
 	<!-- /Section: intro -->
 
+
+
 	<!-- Section: about -->
     <section id="about" class="home-section text-center">
         <div class="heading-about">
           <div class="container">
               <div class="row">
+
                     <div class="col-lg-8 col-lg-offset-2">
                     <div class="wow bounceInDown" data-wow-delay="0.4s">
                     <div class="section-heading">
                           <h2>About me</h2>
-                          <p>I'm a data scientist living in Seattle,
+
+                          <div class="avatar">
+                            <img src="static/img/me.jpg" class="img-circle" height="160" alt="me">
+                          </div>
+
+                          <p>
+                            I'm a data scientist living in Seattle,
                             Washington, and I currently work at Nordstrom,
                             where I apply my skills
-                            in digital marketing. Read on for a brief
-                            history of how I got here.
+                            in digital marketing.
                           </p>
                           <i class="fa fa-2x fa-angle-down"></i>
                     </div>
                     </div>
                     </div>
+
               <!-- /row -->
               </div>
           <!-- /container -->
@@ -219,9 +228,8 @@
                 </div>
           </div>
 
-          <div class="row row-centered">
-          <div class="col-lg-8 col-centered">
-            <div class="boxed-grey">
+          <div class="row">
+
                               <address>
                                     <strong>EMAIL</strong>
                                     <br>
@@ -229,19 +237,14 @@
                               </address>
 
                               <address>
-                                    <strong>SOCIAL NETWORKS</strong>
-                                    <br>
                                     <ul class="company-social">
                                           <li class="social-twitter"><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
-                                          <li class="social-dribble"><a href="#" target="_blank"><i class="fa fa-dribbble"></i></a></li>
-                                          <li class="social-google"><a href="#" target="_blank"><i class="fa fa-google-plus"></i></a></li>
+                                          <li class="social-github"><a href="#" target="_blank" alt="github"><i class="fa fa-github"></i></a></li>
+                                          <li class="social-linkedin"><a href="#" target="_blank"><i class="fa fa-linkedin"></i></a></li>
                                     </ul>
+                                    <br>
+                                    Also see my Tableau Public account.
                               </address>
-              <!-- boxed-grey -->
-              </div>
-
-          <!-- /col-8 -->
-        </div>
           <!-- /row -->
         </div>
 
@@ -251,27 +254,27 @@
   <!-- /Section: contact -->
 	</section>
 
+
 	<footer>
+
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 col-lg-12">
-					<div class="wow" data-wow-delay="0.4s">
-					<div class="page-scroll marginbot-30">
-						<a href="#intro" id="totop" class="btn btn-circle">
-							<i class="fa fa-angle-double-up animated"></i>
-						</a>
-					</div>
-					</div>
-					<p>&copy;Me. All rights reserved.</p>
-                    <div class="credits">
-                        <!--
-                            All the links in the footer should remain intact.
-                            You can delete the links only if you purchased the pro version.
-                            Licensing information: https://bootstrapmade.com/license/
-                            Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Squadfree
-                        -->
-                        <a href="https://bootstrapmade.com/free-one-page-bootstrap-themes-website-templates/">One Page Bootstrap Themes</a> by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-                    </div>
+      					<div class="wow" data-wow-delay="0.4s">
+      					<div class="page-scroll marginbot-30">
+                      <a href="#page-top" id="totop" class="btn btn-circle"><i class="fa fa-angle-double-up animated"></i></a>
+      					</div>
+      					</div>
+  					          <p>&copy;Me. All rights reserved.</p>
+                      <div class="credits">
+                          <!--
+                              All the links in the footer should remain intact.
+                              You can delete the links only if you purchased the pro version.
+                              Licensing information: https://bootstrapmade.com/license/
+                              Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Squadfree
+                          -->
+                          <a href="https://bootstrapmade.com/free-one-page-bootstrap-themes-website-templates/">One Page Bootstrap Themes</a> by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+                        </div>
 				</div>
 			</div>
 		</div>
