remove old files, add email spam js and update timeline descriptions

--- a/app/static/color/default.css
+++ b/app/static/color/default.css
@@ -50,8 +50,17 @@ footer p {
 	color: #f8f8f8;
 }
 
-.credits, .credits a {
+.credits {
     color: #fff;
+}
+
+.credits a{
+	color: #D8D8D8 ;
+}
+
+.credits a:hover,
+.credits a:focus{
+		color: #000;
 }
 
 .btn-skin {
