--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -161,35 +161,52 @@
   <ul>
     <li>
       <div>
-        <h5>2002 to 2009: Absorbing all the things</h5>
+        <h5>2002 to 2006: Undergraduate studies</h5>
           With minimal background in science or mathematics from high
           school, I decided that mathematics was a challenge I wanted to
           pursue in my undergraduate studies and switched my major from
-          English to Mathematics. I
-          earned a B.S. in Mathematics from Columbia College in 2006,
-          a small private teaching college in my hometown, and a M.S. in
-          Applied Mathematics from the University of Missouri in 2009.
+          English to Mathematics. In 2006 I
+          earned a B.S. in Mathematics from
+          <a href="http://www.ccis.edu/" target="_blank">Columbia College</a>,
+          a small private teaching college in my hometown.
       </div>
     </li>
+
+    <li>
+      <div>
+        <h5>2006-2009: Graduate studies</h5>
+          In the Fall of 2006 I accepted a Teaching Assistantship with
+          the University of Missouri and entered the
+          <a href="https://www.math.missouri.edu/?q=grad/applied-mathematics-master-science-ms" target="_blank">M.S. program for Applied Mathematics</a>. In
+          2009 I graduated from the program with
+          a few hundred mathematical proofs, students, and beautifully
+          typeset <a href="http://www.worldcat.org/title/priori-estimates-for-solutions-of-elliptic-partial-differential-equations-on-surfaces/oclc/703919842" target="_blank">thesis</a> pages
+          behind me.
+      </div>
+    </li>
+
     <li>
       <div>
         <h5>2009 to 2015: Professional data diving</h5>
            After I completed my education, I spent the next few years
            gaining foundational experience working with data within a
            wide range of industries.
+           <br><br>
            I have applied my curiosity and attention to detail in industries
-           ranging from property insurance, real estate assessment,
+           ranging from real estate assessment, property insurance,
            biochemical defense, transportation safety research, and
            cancer research.
       </div>
     </li>
     <li>
       <div>
-        <h5>2015 to now: shift to analytics</h5>
-          During the summer of 2015 I joined Nordstrom to pursue a
-          career in analytics and data science for the opportunity to
+        <h5>2015 to now: Data science</h5>
+          In mid-2015 I left the nonprofit research world
+          and joined Nordstrom for the opportunity to
           increase my exposure to statistics applied in more of a
-          business setting. In my current role as a Data Scientist at
+          business setting.
+          <br><br>
+          In my current role as a Data Scientist at
           Nordstrom, I lead analyses from start to finish in
           support of marketing while leveraging new tools, refining
           documentation, and automating processes wherever possible.
@@ -233,17 +250,21 @@
                               <address>
                                     <strong>EMAIL</strong>
                                     <br>
-                                    <a href="mailto:#">email.name@example.com</a>
+                                    <span class="spamspan">
+                                          <span class="u">heidi.a.whiting</span>[ at ]<span class="d">gmail [dot] com</span>
+                                    </span>
+
+
                               </address>
 
                               <address>
                                     <ul class="company-social">
-                                          <li class="social-twitter"><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
-                                          <li class="social-github"><a href="#" target="_blank" alt="github"><i class="fa fa-github"></i></a></li>
-                                          <li class="social-linkedin"><a href="#" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+                                          <li class="social-linkedin"><a href="https://www.linkedin.com/in/heidiwhiting/" target="_blank" title="LinkedIn"><i class="fa fa-linkedin"></i></a></li>
+                                          <li class="social-github"><a href="https://github.com/hbergen" target="_blank" title="GitHub"><i class="fa fa-github"></i></a></li>
+                                          <li class="social-twitter"><a href="https://twitter.com/lucid_ideation" target="_blank" title="Twitter"><i class="fa fa-twitter"></i></a></li>
                                     </ul>
                                     <br>
-                                    Also see my Tableau Public account.
+                                    Also see my <a href="https://public.tableau.com/profile/heidi.whiting">Tableau Public</a> account.
                               </address>
           <!-- /row -->
         </div>
@@ -265,15 +286,26 @@
                       <a href="#page-top" id="totop" class="btn btn-circle"><i class="fa fa-angle-double-up animated"></i></a>
       					</div>
       					</div>
-  					          <p>&copy;Me. All rights reserved.</p>
                       <div class="credits">
+                        <h4>About this site</h4>
                           <!--
                               All the links in the footer should remain intact.
                               You can delete the links only if you purchased the pro version.
                               Licensing information: https://bootstrapmade.com/license/
                               Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Squadfree
                           -->
-                          <a href="https://bootstrapmade.com/free-one-page-bootstrap-themes-website-templates/">One Page Bootstrap Themes</a> by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+                          This site is created from python
+                          <a href="http://flask.pocoo.org/" target="_blank">Flask</a> and is
+                          running on <a href="https://www.heroku.com/" target="_blank">heroku</a>.
+                          <br><br>
+                          The responsive theming is
+                          stitched together from various
+                          <a href="https://codepen.io/tutsplus/pen/QNeJgR" target="_blank">codepens</a>
+                          and
+                          <a href="https://bootstrapmade.com/free-one-page-bootstrap-themes-website-templates/" target="_blank">One Page Bootstrap Themes</a>
+                          by <a href="https://bootstrapmade.com/" target="_blank">BootstrapMade</a>.
+                          <br><br>
+                          <a href="https://github.com/hbergen/heroku-flask-portfolio" target="_blank">View my source code for this site.</a>
                         </div>
 				</div>
 			</div>
