update content and picture

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -118,14 +118,11 @@
                           <h2>About me</h2>
 
                           <div class="avatar">
-                            <img src="static/img/me.jpg" class="img-circle" height="160" alt="me">
+                            <img src="static/img/me.png" class="img-circle" height="160" alt="me">
                           </div>
 
-                          <p>
-                            I'm a data scientist living in Seattle,
-                            Washington, and I currently work at Nordstrom,
-                            where I apply my skills
-                            in digital marketing.
+                          <p class="text-center">
+                            I'm a data scientist in Seattle with 8 years of experience.
                           </p>
                           <i class="fa fa-2x fa-angle-down"></i>
                     </div>
@@ -206,10 +203,9 @@
           increase my exposure to statistics applied in more of a
           business setting.
           <br><br>
-          In my current role as a Data Scientist at
-          Nordstrom, I lead analyses from start to finish in
-          support of marketing while leveraging new tools, refining
-          documentation, and automating processes wherever possible.
+          In my current role as a Senior Data Scientist at
+          Nordstrom, I lead analyses from start to finish while leveraging new tools,
+          refining documentation, and automating processes wherever possible.
       </div>
     </li>
 
@@ -263,8 +259,6 @@
                                           <li class="social-github"><a href="https://github.com/hbergen" target="_blank" title="GitHub"><i class="fa fa-github"></i></a></li>
                                           <li class="social-twitter"><a href="https://twitter.com/lucid_ideation" target="_blank" title="Twitter"><i class="fa fa-twitter"></i></a></li>
                                     </ul>
-                                    <br>
-                                    Also see my <a href="https://public.tableau.com/profile/heidi.whiting">Tableau Public</a> account.
                               </address>
           <!-- /row -->
         </div>
