add blank target to a link

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -90,7 +90,7 @@
 
       		<div class="slogan">
       			<h2>Heidi Whiting</h2>
-      			<h4>Fan of <a href="https://en.wikipedia.org/wiki/KISS_principle" class="slogan">simplification</a>,
+      			<h4>Fan of <a href="https://en.wikipedia.org/wiki/KISS_principle" class="slogan" target="_blank">simplification</a>,
               white noise, empathy, and enthusiastic learning. Data geek.
             </h4>
       		</div>
