--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -122,7 +122,7 @@
                           </div>
 
                           <p class="text-center">
-                            I'm a data scientist in Seattle with 8 years of experience.
+                            I'm a data scientist living in Seattle, Washington.
                           </p>
                           <i class="fa fa-2x fa-angle-down"></i>
                     </div>
