fix broken link

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -53,7 +53,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                     <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="index.html">
+                <a class="navbar-brand" href="">
                     <h1>home</h1>
                 </a>
             </div>
